# time-capsule

./: .gitignore  .gitmodules  .npmrc  README.md  TEST_RESULTS.md  UNLOCK_APPROVE_IMPLEMENTATION.md  WASM_FIX_SUMMARY.md  package.json  pnpm-lock.yaml  quick-test.ps1  test-simple.ps1  test-wasm-fix.js  tsconfig.json  turbo.json  vercel.json
apps/web/: .env.local.example  .env.template  next.config.js  package.json
apps/web/public/: encryptor_wasi_bg.wasm
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/capsule/[id]/: page.tsx
apps/web/src/app/capsules/: page.tsx
apps/web/src/app/capsules/[id]/: page.tsx
apps/web/src/app/create/: page.tsx
apps/web/src/app/debug/: page.tsx
apps/web/src/app/debug-blockchain/: page.tsx
apps/web/src/app/debug-encryption/: page.tsx
apps/web/src/app/demo/: page.tsx
apps/web/src/app/simple-wasm-test/: page.tsx
apps/web/src/app/test-encryption-fix/: page.tsx
apps/web/src/app/test-encryption-flow/: page.tsx
apps/web/src/app/test-full-flow/: page.tsx
apps/web/src/app/test-wasm/: page.tsx
apps/web/src/components/: ApprovalSection.tsx  CapsuleList.tsx  CreateCapsuleForm.tsx  CreateTimeCapsule.tsx  DebugInfo.tsx  ErrorBoundary.tsx  Footer.tsx  Header.tsx  Layout.tsx  Loading.tsx  MobileTabBar.tsx  MobileWalletInfo.tsx  PaymentSection.tsx  SimpleCapsuleList.tsx  TransactionLookup.tsx  UnlockModal.tsx  WalletConnection.tsx  index.ts
apps/web/src/components/capsules/: ApprovalModal.tsx  CapsuleCard.tsx  CapsuleDetail.tsx  CapsuleList.tsx  CapsuleStatusBadge.tsx  ContentViewer.tsx  CountdownTimer.tsx  ProgressBar.tsx  UnlockModal.tsx  index.ts
apps/web/src/components/create/: ContentUpload.tsx  CreationProgress.tsx  CreationSuccess.tsx  UnlockConditionSelector.tsx
apps/web/src/hooks/: index.ts  useCapsuleUpdates.ts  useLatestCommit.ts  useMobileTabBarHeight.ts  useWallet.ts
apps/web/src/lib/: pinata-sdk.ts  sdk-simple.ts  sdk.ts
apps/web/src/providers/: SuiProvider.tsx  index.ts
apps/web/src/types/: capsule.ts
contracts/: .gitkeep  Move.toml
contracts/sources/: time_capsule.move
contracts/time_capsule/: Move.toml
contracts/time_capsule/sources/: capsule.move  capsule_tests.move  simple_capsule.move
rust/: .gitkeep  Cargo.toml
rust/cli-tool/: Cargo.toml  test_config.toml  test_file.txt
rust/cli-tool/src/: batch.rs  config.rs  file_processor.rs  lib.rs  main.rs  sdk.rs  utils.rs
rust/cli-tool/src/commands/: approve.rs  batch.rs  create.rs  list.rs  mod.rs  unlock.rs
rust/cli-tool/tests/: batch_integration_tests.rs
rust/encryptor-wasi/: Cargo.toml  build-wasm.ps1  build-wasm.sh  test_wasm.js
rust/encryptor-wasi/src/: hash.rs  lib.rs  wasm_bindings.rs
scripts/: .gitkeep  complete-setup.js  conditional-setup.js  deploy-contract.js  init-sui-client.js  setup-env.js  setup-sui.js  verify-setup.js
