[workspace]
members = ["encryptor-wasi", "cli-tool"]
resolver = "2"

[workspace.dependencies]
# Cryptography
chacha20poly1305 = "0.10"
blake3 = "1.5"
rand = "0.9.2"

# WASI and WebAssembly
wasi = "0.14.2+wasi-0.2.4"
wasmtime = "36.0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0.16"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
dirs = "5.0"
env_logger = "0.11"
log = "0.4"
base64 = "0.22"

# IPFS
ipfs-api-backend-hyper = "0.6"
