[workspace]
members = ["encryptor-wasi", "cli-tool"]
resolver = "2"

[workspace.dependencies]
# Cryptography
chacha20poly1305 = "0.10"
blake3 = "1.5"
rand = "0.9.2"

# WASI and WebAssembly
wasi = "0.14.2+wasi-0.2.4"
wasmtime = "36.0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0.16"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.9.5"
dirs = "6.0.0"
env_logger = "0.11"
log = "0.4"
base64 = "0.22"
indicatif = "0.18.0"
console = "0.16.0"
walkdir = "2.5"
reqwest = { version = "0.12.23", features = ["json"] }
futures = "0.3"

# IPFS
ipfs-api-backend-hyper = "0.6"
