[package]
name = "capsule-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "capsule"
path = "src/main.rs"

[dependencies]
encryptor-wasi = { path = "../encryptor-wasi" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
ipfs-api-backend-hyper = { workspace = true }

# Additional dependencies for CLI functionality
toml = "0.8"
dirs = "5.0"
env_logger = "0.11"
log = "0.4"
base64 = "0.22"
rand = "0.9"

[dev-dependencies]
tempfile = "3.8"
