[package]
name = "capsule-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "capsule"
path = "src/main.rs"

[dependencies]
encryptor-wasi = { path = "../encryptor-wasi" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
ipfs-api-backend-hyper = { workspace = true }

# Additional dependencies for CLI functionality
toml = "0.9.5"
dirs = "6.0.0"
env_logger = "0.11"
log = "0.4"
base64 = "0.22"
rand = "0.9"

# Progress and UI
indicatif = "0.18.0"
console = "0.16.0"
dialoguer = "0.12.0"

# File handling
mime_guess = "2.0"
walkdir = "2.5"

# HTTP client for Sui RPC
reqwest = { version = "0.12.23", features = ["json"] }

# Async utilities
futures = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Encryption
aes-gcm = "0.10"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8"
