[package]
name = "encryptor-wasi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
chacha20poly1305 = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
wasi = { workspace = true }
hex = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
getrandom = { workspace = true }
sha3 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
